backend/deployment/k8s/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: proyecto-grupo-25
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: proyecto-grupo-25
  name: candidato
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: candidato
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: candidato
    spec:
      containers:
      - image: CANDIDATO_IMAGE
        imagePullPolicy: Always
        name: candidato
        ports:
        - containerPort: 5001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: proyecto-grupo-25
  name: candidato-cb
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: candidato-cb
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: candidato-cb
    spec:
      containers:
      - image: CANDIDATO_CB_IMAGE
        imagePullPolicy: Always
        name: candidato-cb
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  namespace: proyecto-grupo-25
  name: service-candidato
spec:
  ports:
    - port: 5001
      targetPort: 5001
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: candidato
---
apiVersion: v1
kind: Service
metadata:
  namespace: proyecto-grupo-25
  name: service-candidato-cb
spec:
  ports:
    - port: 5002
      targetPort: 5002
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: candidato-cb
---




apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: proyecto-grupo-25
  name: empresa
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: empresa
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: empresa
    spec:
      containers:
      - image: EMPRESA_IMAGE
        imagePullPolicy: Always
        name: empresa
        ports:
        - containerPort: 5003
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: proyecto-grupo-25
  name: empresa-cb
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: empresa-cb
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: empresa-cb
    spec:
      containers:
      - image: EMPRESA_CB_IMAGE
        imagePullPolicy: Always
        name: empresa-cb
        ports:
        - containerPort: 5004
---
apiVersion: v1
kind: Service
metadata:
  namespace: proyecto-grupo-25
  name: service-empresa
spec:
  ports:
    - port: 5003
      targetPort: 5003
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: empresa
---
apiVersion: v1
kind: Service
metadata:
  namespace: proyecto-grupo-25
  name: service-empresa-cb
spec:
  ports:
    - port: 5004
      targetPort: 5004
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: empresa-cb
---






apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: proyecto-grupo-25
  name: ingress-proyecto-grupo-25
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /candidato
          pathType: Prefix
          backend:
            service:
              name: service-candidato-cb
              port:
                number: 5002
        - path: /empresa
          pathType: Prefix
          backend:
            service:
              name: service-empresa-cb
              port:
                number: 5004
